# GameEngine

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/components/: Transform.hpp  Velocity.hpp
engine/core/: Engine.cpp  Engine.hpp  Window.cpp  Window.hpp  log.cpp  log.hpp
engine/ecs/: BaseStorage.hpp  ComponentStorage.hpp  Entity.hpp  EntityView.hpp  ISystem.hpp  SystemsContainer.cpp  SystemsContainer.hpp  World.hpp
engine/fsm/: IState.hpp  StateMachine.hpp
engine/fsm/States/: BootstrapState.cpp  BootstrapState.hpp  StartEngineState.cpp  StartEngineState.hpp
engine/render/: RenderService.cpp  RenderService.hpp
engine/render/Factories/: CameraFactory.cpp  CameraFactory.hpp  RenderObjectFactory.cpp  RenderObjectFactory.hpp
engine/render/components/: CameraComponent.hpp  MeshRenderer.hpp  RenderComponent.hpp  RenderMeshComponent.hpp
engine/render/dx12/: DX12Renderer.cpp  DX12Renderer.hpp  RenderObjectFactory.cpp  RendererCommandService.cpp  RendererCommandService.hpp  RendererConstantBufferService.cpp  RendererConstantBufferService.hpp  RendererDepthStencilService.cpp  RendererMeshUploadService.cpp  RendererMeshUploadService.hpp  RendererPipelineService.cpp  RendererPipelineService.hpp  RendererRTVService.cpp  RendererRTVService.hpp  RendererRootSignatureService.cpp  RendererRootSignatureService.hpp  RendererSwapChainService.hpp
engine/render/dx12/services/: ModelLoaderService.cpp  ModelLoaderService.hpp  RendererCommandService.cpp  RendererConstantBufferService.cpp  RendererConstantBufferService.hpp  RendererDepthStencilService.hpp  RendererMeshUploadService.cpp  RendererPipelineService.cpp  RendererRootSignatureService.cpp  RendererSwapChainService.cpp
engine/render/shaders/: PixelShader.hlsl  VertexShader.hlsl
engine/render/systems/: CameraSystem.cpp  CameraSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
engine/services/: ServiceLocator.hpp
